[package]
name = "saw"
version = "0.1.0"
authors = ["audiodog301"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32h7xx-hal = { version = "0.9.0", features = ["stm32h750v","rt","fmc"] }
cortex-m = "0.6.2"
cortex-m-rtic = "0.5.6"
log = "0.4.11"
libdaisy = "0.1.0"

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
incremental = false
opt-level = "s" # optimize for binary size  